# Boardgames---Akinator

./: .gitignore  Palavra - Sabedoria financeira.ipynb  README.md  Tratamento_de_relatório_geral_do_elog.ipynb  bgg-search.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
database/: 5k version.xlsx
