[project]
name = "boardgames-akinator"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Pinheiro",email = "mateus.mcpa@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "kagglehub (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
