[project]
name = "boardgames-akinator"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Pinheiro",email = "mateus.mcpa@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "rapidfuzz>=3.0.0",
    "kagglehub>=0.1.0"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
